[package]
name = "turbo-guacamole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tguac"
path = "src/lib.rs"

[[bin]]
name = "turbo-guacamole"
path = "src/bin/sever.rs"

[dependencies]
dashmap = "5.5.3"
bytes = { version = "1.5.0", features = ["serde"] }
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "rt",
  "net",
  "sync",
  "signal",
] }
